<resources>
    <string name="app_name">LAUNDRY</string>
    <string name="buatakun">Buat Akun</string>
    <string name="forgetpasword">Forget Password!</string>
    <string name="login">LOGIN</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="GITA">GHITAA</string>
    <string name="selamatdatang">Selamat Datang</string>
    <string name="this_activity">Ini adalah menu activity</string>
    <string name="this_fragment">Ini adalah menu fragment</string>
    <string name="search">Search</string>
    <string name="menu_1">menu1</string>
    <string name="menu_2">menu2</string>
    <string name="search_hint">Masukkan kata</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="daftar_akun">daftar akun</string>
    <string name="Ghitaa">GHITAA</string>
    <string name="belum_punya_akun">belum punya akun</string>
    <string name="Riwayat_Transaksi">Riwayat Transaksi</string>
    <string name="hari1">Hari-1</string>
    <string name="ID">ID Transaksi:</string>
    <string name="Detail_Transaksi">Detail Transaksi</string>
    <string name="No_Order">No Order</string>
    <string name="nama">Nama Lengkap    :</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="alamat">Alamat Lengkap</string>
    <string name="Telepon">Telepon_082279353091</string>
    <string name="telepon">telepon : 082279353091</string>
    <string name="Alamat">Alamat : Gading Rejo</string>
    <string name="Nama_lengkap">Nama Lengkap : Gita Febriani</string>
    <string name="NoOrder">No Order : 0101</string>
    <string name="Tipe">Tipe Pembayaran : Cash</string>
    <string name="Status">Status Pembayaran : Lunas</string>
    <string name="Hari2">Hari ke-2</string>
    <string name="no_order">No Order : 0102</string>
    <string name="Namalengkap">Nama Lengkap : Dita Salsabila</string>
    <string name="alamat2">Alamat : Tanggamus</string>
    <string name="telepon2">Telepon : 085765334127</string>
    <string name="Tipe2">Tipe Pembayaran : Cash</string>
    <string name="Status2">Status : Lunas</string>
    <string name="no_order3">No Order : 0103</string>
    <string name="Namalengkap3">Nama Lengkap : Marta Santa</string>
    <string name="alamat3">Alamat : Bandar Lampung</string>
    <string name="telepon3">Telepon : 081389756091</string>
    <string name="Tipe3">Tipe Pembayaran : Kredit</string>
    <string name="Status3">Status : Belum Lunas</string>
    <string name="Hari1">Hari ke -1</string>
    <string name="Hari3">Hari ke-3</string>
    <string name="No_order3">No Order : 0103</string>
    <string name="Nama_lengkap3">Nama Lengkap : Rayhan Al-kahfi</string>
    <string name="Telepon3">Telepon : 087731324156</string>
    <string name="Tipe_3">Tipe Pembayaran : Credit</string>
    <string name="Status_3">Status : Belum Lunas</string>
    <string name="Hari4">Hari ke-4</string>
    <string name="Nama_lengkap4">Nama Lengkap : Marta Santa</string>
    <string name="alamat4">Alamat : Bandar Lampung</string>
    <string name="Telepon4">Telepon : 085677412583</string>
    <string name="Tipe_4">Tipe Pembayaran : Cash</string>
    <string name="Status_4">Status : Lunas</string>
    <string name="Hari5">Hari ke-5</string>
    <string name="No_order5">No Order : 0105</string>
    <string name="No_order4">No Order : 0104</string>
    <string name="Nama_lengkap5">Nama Lengkap : Damayanti F.L</string>
    <string name="alamat5">Alamat : Purworejo</string>
    <string name="Telepon5">Telepon : 082271354230</string>
    <string name="Tipe_5">Tipe Pembayaran : Cash</string>
    <string name="Status_5">Status : Lunas</string>
    <string name="Hari6">Hari ke -6</string>
    <string name="No_order6">No Order : 0106</string>
    <string name="Nama_lengkap6">Nama Lengkap : Didi Santoso</string>
    <string name="alamat6">Alamat : Kemiling</string>
    <string name="Telepon6">Telepon : 089786754332</string>
    <string name="Tipe_6">Tipe Pembayaran : Tempo</string>
    <string name="Status_6">Status : Belum Lunas</string>
    <string name="Hari7">Hari ke-7</string>
    <string name="No_order7">No Order : 0107</string>
    <string name="Nama_lengkap7">Nama Lengkap : Keisha Nurul Annisa</string>
    <string name="alamat7">Pringsewu</string>
    <string name="Telepon7">082175643215</string>
    <string name="Tipe_7">Tipe Pembayaran : Lunas</string>
    <string name="tipe_7">Tipe Pembayaran : Cash</string>
    <string name="Status_7">Status : Lunas</string>
    <string name="registrasi">Registrasi</string>
    <string name="Email">Email</string>
    <string name="nohp">No.Handphone</string>
    <string name="ALAMAT">Alamat</string>
    <string name="JK">Jenis Kelamin     - laki-laki      - Perempuan</string>
    <string name="Jk">Jenis Kelamin</string>
</resources>