<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gggg"
    tools:context=".activity_welcome">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/teks1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/detail_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/Detail_Transaksi"
                android:textColor="@color/white"
                android:textSize="30dp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/Hari1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hari1"
                android:textSize="30dp"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/No_Order"
                android:layout_below="@+id/detail_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoOrder"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Nama"
                android:layout_below="@+id/detail_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nama_lengkap"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/alamat"
                android:layout_below="@+id/detail_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Alamat"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Telepon"
                android:layout_below="@+id/no1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telepon"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Tipe"
                android:layout_below="@+id/detail_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipe"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Status"
                android:layout_below="@+id/detail_transaksi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks2"
            android:layout_below="@+id/teks1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Hari2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hari2"
                android:textSize="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/NoOrder2"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_order"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/nama2"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Namalengkap"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/alamat2"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat2"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Telepon2"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telepon2"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Tipe2"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipe2"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/status2"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status2"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks3"
            android:layout_below="@+id/teks2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Hari3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hari3"
                android:textSize="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/NoOrder3"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/No_order3"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/nama3"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nama_lengkap3"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Alamat3"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat2"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/telepon3"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Telepon3"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tipe"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipe_3"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/status"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status_3"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks4"
            android:layout_below="@+id/teks3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Hari4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hari4"
                android:textSize="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/noOrder4"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/No_order3"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/nama4"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nama_lengkap4"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Alamat4"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat4"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/telepon4"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Telepon4"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tipe4"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipe_4"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/status4"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status_4"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks5"
            android:layout_below="@+id/teks4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Hari5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hari5"
                android:textSize="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/No_Order5"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/No_order5"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/nama5"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nama_lengkap5"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Alamat5"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat5"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/telepon5"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Telepon5"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tipe5"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipe_5"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/status5"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status_5"
                android:textSize="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks6"
            android:layout_below="@+id/teks5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Hari6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hari6"
                android:textSize="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/noOrder6"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/No_order6"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/nama6"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nama_lengkap6"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Alamat6"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat6"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/telepon6"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Telepon6"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tipe6"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Tipe_6"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/status6"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status_6"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teks7"
            android:layout_below="@+id/teks6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Hari7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Hari7"
                android:textSize="30dp"
                android:layout_marginTop="20dp"/>

            <TextView
                android:id="@+id/No_Order7"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/No_order7"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/nama7"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Nama_lengkap7"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/Alamat7"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/alamat7"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/telepon7"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Telepon7"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/tipe7"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipe_7"
                android:textSize="20dp"/>
            <TextView
                android:id="@+id/status7"
                android:layout_below="@+id/detail_transaksi2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Status_7"
                android:textSize="20dp"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>