<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gggg"
    tools:context=".Activity_menu2">


    <TextView
        android:id="@+id/registrasi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/registrasi"
        android:textColor="@color/white"
        android:textSize="35dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registrasi"
        android:layout_marginTop="20dp"
        android:hint="@string/username"
        android:textColor="@color/white"
        android:padding="10dp" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:padding="10dp"
            android:textColor="@color/black" />
        <EditText
            android:id="@+id/Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="5dp"
            android:hint="@string/Email"
            android:padding="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Email"
            android:layout_marginTop="5dp"
            android:hint="@string/nohp"
            android:padding="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nohp"
            android:layout_marginTop="5dp"
            android:hint="@string/ALAMAT"
            android:padding="10dp"
            android:textColor="@color/black" />

        <EditText
            android:id="@+id/JK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/alamat"
            android:layout_marginTop="5dp"
            android:hint="@string/Jk"
            android:padding="10dp"
            android:textColor="@color/black" />
    </RelativeLayout>
