<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/laundry" />

    <TextView
        android:id="@+id/title_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/icon_image"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/GITA"
        android:textColor="@color/black"
        android:textSize="35dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/form_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_login"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/teal_200"
        android:padding="16dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="10dp"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/username"
            android:layout_marginTop="5dp"
            android:hint="@string/password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/password"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/design_default_color_background"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/title_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"
            android:text="@string/forgetpasword"
            android:textColor="@color/red_800"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_footer"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/buatakun"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </RelativeLayout>

</RelativeLayout>